--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,8 +1,3 @@
 option_settings:
-  "aws:elasticbeanstalk:application:environment":
-    DJANGO_SETTINGS_MODULE: "calc_AP.settings"
-    "PYTHONPATH": "/var/app/current:$PYTHONPATH"
-  "aws:elasticbeanstalk:container:python":
+  aws:elasticbeanstalk:container:python:
     WSGIPath: calc_AP.wsgi:application
-    NumProcesses: 3
-    NumThreads: 20
